Fix table actions layout issue

--- a/src/css/components/table.less
+++ b/src/css/components/table.less
@@ -205,10 +205,6 @@ yeti-table {
     border-top: 1px solid #e0e0e0;
 }
 
-yeti-table-actions {
-    display: contents;
-}
-
 yeti-table-actions[use-grid] yeti-table-action {
     display: flex;
     align-items: center;
@@ -236,10 +232,6 @@ yeti-table-actions[use-grid] yeti-table-action {
 
 
 /************************************** Pagination ***/
-yeti-table-pagination {
-    display: contents;
-}
-
 .yeti-table-pagination {
     min-height: 2.5rem;
     display: flex;
